--- a/app/views/hello.scala.html
+++ b/app/views/hello.scala.html
@@ -1,2 +1,2 @@
-@(name: String)(implicit request: RequestHeader)
+@(name: String)(implicit request: RequestHeader, webJarAssets: WebJarAssets)
 @mainBootstrap(s"Hello, $name!")(Html(s"""<p>It's so good to see you, $name!</p>"""))
