--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit webJarAssets: WebJarAssets)
 <!DOCTYPE html>
 <html>
   <head>
