--- a/app/views/mainBootstrap.scala.html
+++ b/app/views/mainBootstrap.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)(implicit request: RequestHeader)
+@(title: String)(content: Html)(implicit request: RequestHeader, webJarAssets: WebJarAssets)
 <!DOCTYPE html>
 <html>
     <head>
