--- a/app/views/hello.scala.html
+++ b/app/views/hello.scala.html
@@ -1,2 +1,3 @@
+@* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @(name: String)(implicit request: RequestHeader, webJarAssets: WebJarAssets)
 @mainBootstrap(s"Hello, $name!")(Html(s"""<p>It's so good to see you, $name!</p>"""))
