--- a/app/views/mainBootstrap.scala.html
+++ b/app/views/mainBootstrap.scala.html
@@ -1,3 +1,4 @@
+@* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @(title: String)(content: Html)(implicit request: RequestHeader, webJarAssets: WebJarAssets)
 <!DOCTYPE html>
 <html>
