--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -1,3 +1,3 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @(name: String)(implicit assets: Assets, request: RequestHeader, webJarAssets: WebJarAssets)
-@mainBootstrap(s"Hello, $name!")(Html(s"""<p>It's so good to see you, $name!</p>"""))
+@mainBootstrap(s"Hello, $name!")(Html(s"""<p>Help, $name, I am trapped inside this computer!</p>"""))
