--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,11 +1,11 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
-@(title: String)(content: Html)(implicit webJarAssets: WebJarAssets)
+@(title: String)(content: Html)(implicit assets: Assets, webJarAssets: WebJarAssets)
 <!DOCTYPE html>
 <html>
   <head>
     <title>@title</title>
-    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <link rel="stylesheet" href="@assets.at("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@assets.at("images/favicon.png")">
     <script src='@webjar("jquery.min.js"))'></script>
   </head>
   <body>
