--- a/app/views/mainBootstrap.scala.html
+++ b/app/views/mainBootstrap.scala.html
@@ -1,23 +1,23 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
-@(title: String)(content: Html)(implicit request: RequestHeader, webJarAssets: WebJarAssets)
+@(title: String)(content: Html)(implicit assets: Assets, request: RequestHeader, webJarAssets: WebJarAssets)
 <!DOCTYPE html>
 <html>
     <head>
       <title>@title</title>
-      <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+      <link rel="shortcut icon" type="image/png" href="@assets.at("images/favicon.png")">
       <script src='@webjar("jquery.min.js")'></script>
       <script src='@webjar("bootstrap.min.js")'></script>
       <link href='@webjar("css/bootstrap.min.css")' rel="stylesheet" />
-      <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+      <link rel="stylesheet" media="screen" href="@assets.at("stylesheets/main.css")">
     </head>
     <body>
       <header class="jumbotron subhead" id="overview">
         <div class="container">
-          <img src="@routes.Assets.at("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
+          <img src="@assets.at("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
         </div>
       </header>
       <div class="container">
-        @menu(request)
+        @menu
         <div class="row">
           @content
         </div>
