--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,12 +1,13 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
-@(title: String)(content: Html)(implicit assets: Assets, webJarAssets: WebJarAssets)
+@import org.webjars.play.WebJarsUtil
+@(title: String)(content: Html)(implicit assets: Assets, webJarsUtil: WebJarsUtil)
 <!DOCTYPE html>
 <html>
   <head>
     <title>@title</title>
     <link rel="stylesheet" href="@assets.at("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@assets.at("images/favicon.png")">
-    <script src='@webjar("jquery.min.js"))'></script>
+    <script src='@webJarsUtil.url("jquery.min.js"))'></script>
   </head>
   <body>
   @content
