--- a/app/views/mainBootstrap.scala.html
+++ b/app/views/mainBootstrap.scala.html
@@ -5,20 +5,20 @@
 <html>
     <head>
       <title>@title</title>
-      <link rel="shortcut icon" type="image/png" href="@assets.at("images/favicon.png")">
-      <script src='@webJarsUtil.url("jquery.min.js")'></script>
-      <script src='@webJarsUtil.url("bootstrap.min.js")'></script>
-      <link href='@webJarsUtil.url("css/bootstrap.min.css")' rel="stylesheet" />
-      <link rel="stylesheet" media="screen" href="@assets.at("stylesheets/main.css")">
+      <link rel="shortcut icon" type="image/png" href="@Assets.at("images/favicon.png")">
+      <script src='@webJarsUtil.url("jquery.min.js").get'></script>
+      <script src='@webJarsUtil.url("bootstrap.min.js").get'></script>
+      <link href='@webJarsUtil.url("css/bootstrap.min.css").get' rel="stylesheet" />
+      <link rel="stylesheet" media="screen" href="@Assets.at("stylesheets/main.css")">
     </head>
     <body>
       <header class="jumbotron subhead" id="overview">
         <div class="container">
-          <img src="@assets.at("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
+          <img src="@Assets.at("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
         </div>
       </header>
       <div class="container">
-        @menu
+        @menu()
         <div class="row">
           @content
         </div>
