--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -1,5 +1,6 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
-@(message: String, style: String = "scala")
+@import org.webjars.play.WebJarsUtil
+@(message: String, style: String = "scala")(implicit assets: Assets, request: RequestHeader, webJarsUtil: WebJarsUtil)
 @mainBootstrap(message) {
     <section id="top">
       <div class="wrapper">
@@ -9,53 +10,34 @@
 
     <div id="content" class="wrapper doc">
     <article>
-
-      <h1>Welcome to Play</h1>
-
-      <p>
-        Congratulations, you’ve just created a new Play application. This page will help you with the next few steps.
-      </p>
+      <p>Congratulations, you’ve just created a new Play application. This page will help you with the next few steps.</p>
 
       <blockquote>
-        <p>
-          You’re using Play @play.core.PlayVersion.current
-        </p>
+        <p>You’re using Play v@play.core.PlayVersion.current</p>
       </blockquote>
 
       <h2>Why do you see this page?</h2>
+        <p>The <code>conf/routes</code> file defines a route that tells Play to invoke the <code>ApplicationController.welcome</code> action
+          whenever a browser requests the <code>/</code> URI using the <code>GET</code> method:</p>
 
-        <p>
-          The <code>conf/routes</code> file defines a route that tells Play to invoke the <code>HomeController.index</code> action
-          whenever a browser requests the <code>/</code> URI using the GET method:
-        </p>
+        <pre># Home page
+GET  /  controllers.HomeController.index</pre>
 
-        <pre><code># Home page
-    GET     /               controllers.HomeController.index</code></pre>
+        <p>Play has invoked the <code>controllers.HomeController.index</code> method to obtain the <code>Action</code> to execute:</p>
 
-        <p>
-          Play has invoked the <code>controllers.HomeController.index</code> method to obtain the <code>Action</code> to execute:
-        </p>
+        <pre>def index = Action { implicit request: Request[AnyContent] =>
+  Ok(views.html.index("Your new application is ready!"))
+}</pre>
 
-        <pre><code>def index = Action { implicit request: Request[AnyContent] =>
-      Ok(views.html.index("Your new application is ready!"))
-    }</code></pre>
+        <p>An action is a function that handles the incoming HTTP request, and returns the HTTP result to send back to the web client.
+          Here we send a <code>200 OK</code> response, using a template to fill its content.</p>
 
-        <p>
-          An action is a function that handles the incoming HTTP request, and returns the HTTP result to send back to the web client.
-          Here we send a <code>200 OK</code> response, using a template to fill its content.
-        </p>
+        <p>The template is defined in the <code>app/views/index.scala.html</code> file and compiled as a Scala function.</p>
 
-        <p>
-          The template is defined in the <code>app/views/index.scala.html</code> file and compiled as a Scala function.
-        </p>
-
-        <pre><code>@@(message: String)
-
-    @@main("Welcome to Play") {
-
-        @@welcome(message)
-
-    }</code></pre>
+        <pre>@@(message: String)
+@@main("Welcome to Play") {
+    @@welcome(message)
+}</pre>
 
         <p>
           The first line of the template defines the function signature. Here it just takes a single <code>String</code> parameter.
