--- a/app/views/hello.scala.html
+++ b/app/views/hello.scala.html
@@ -1,4 +1,4 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @import org.webjars.play.WebJarsUtil
-@(name: String)(implicit assets: Assets, request: RequestHeader, webJarsUtil: WebJarsUtil)
+@(name: String)(implicit assets: AssetsFinder, request: RequestHeader, webJarsUtil: WebJarsUtil)
 @mainBootstrap(s"Hello, $name!")(Html(s"""<p>It's so good to see you, $name!</p>"""))
