--- a/app/views/mainBootstrap.scala.html
+++ b/app/views/mainBootstrap.scala.html
@@ -1,20 +1,20 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @import org.webjars.play.WebJarsUtil
-@(title: String)(content: Html)(implicit assets: Assets, request: RequestHeader, webJarsUtil: WebJarsUtil)
+@(title: String)(content: Html)(implicit assets: AssetsFinder, request: RequestHeader, webJarsUtil: WebJarsUtil)
 <!DOCTYPE html>
 <html>
     <head>
       <title>@title</title>
-      <link rel="shortcut icon" type="image/png" href="@Assets.at("images/favicon.png")">
+      <link rel="shortcut icon" type="image/png" href="@assets.path("images/favicon.png")">
       <script src='@webJarsUtil.url("jquery.min.js").get'></script>
       <script src='@webJarsUtil.url("bootstrap.min.js").get'></script>
       <link href='@webJarsUtil.url("css/bootstrap.min.css").get' rel="stylesheet" />
-      <link rel="stylesheet" media="screen" href="@Assets.at("stylesheets/main.css")">
+      <link rel="stylesheet" href="@assets.path("stylesheets/main.css")">
     </head>
     <body>
       <header class="jumbotron subhead" id="overview">
         <div class="container">
-          <img src="@Assets.at("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
+          <img src="@assets.path("images/play_full_color_123x64.png")" style="float: right; width: 100px; margin-top: 40px;"><h1>@title</h1>
         </div>
       </header>
       <div class="container">
