--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -1,6 +1,6 @@
 @* See the [[https://scalacourses.com/student/showLecture/15 Twirl View Templates]] lecture. *@
 @import org.webjars.play.WebJarsUtil
-@(message: String, style: String = "scala")(implicit assets: Assets, request: RequestHeader, webJarsUtil: WebJarsUtil)
+@(message: String, style: String = "scala")(implicit assets: AssetsFinder, request: RequestHeader, webJarsUtil: WebJarsUtil)
 @mainBootstrap(message) {
     <section id="top">
       <div class="wrapper">
