--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,10 @@ code, pre {
   color: #001300;
 }
 
+.code, code, tt, pre {
+  font-family: "DejaVu Sans Serif Mono", Monaco, Menlo, Consolas, "Courier New", monospace;
+}
+
 h1, h2, h3, h4, h5, h6 {
   background-color: rgba(203, 190, 54, 0.58);
   color: #4C0D0D;
